; ModuleID = '/home/carl/AnghaBench/git/extr_gpg-interface.c_signature_check_clear.c'
source_filename = "/home/carl/AnghaBench/git/extr_gpg-interface.c_signature_check_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.signature_check = type { i32, i32, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @signature_check_clear(%struct.signature_check* %0) #0 {
  %2 = alloca %struct.signature_check*, align 8
  store %struct.signature_check* %0, %struct.signature_check** %2, align 8
  %3 = load %struct.signature_check*, %struct.signature_check** %2, align 8
  %4 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %3, i32 0, i32 6
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @FREE_AND_NULL(i32 %5)
  %7 = load %struct.signature_check*, %struct.signature_check** %2, align 8
  %8 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %7, i32 0, i32 5
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @FREE_AND_NULL(i32 %9)
  %11 = load %struct.signature_check*, %struct.signature_check** %2, align 8
  %12 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %11, i32 0, i32 4
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @FREE_AND_NULL(i32 %13)
  %15 = load %struct.signature_check*, %struct.signature_check** %2, align 8
  %16 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @FREE_AND_NULL(i32 %17)
  %19 = load %struct.signature_check*, %struct.signature_check** %2, align 8
  %20 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @FREE_AND_NULL(i32 %21)
  %23 = load %struct.signature_check*, %struct.signature_check** %2, align 8
  %24 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @FREE_AND_NULL(i32 %25)
  %27 = load %struct.signature_check*, %struct.signature_check** %2, align 8
  %28 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @FREE_AND_NULL(i32 %29)
  ret void
}

declare dso_local i32 @FREE_AND_NULL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
